IaC/Infrastructure/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: e-commerce-admin
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: admin-e-commerce-admin
            port:
              number: 3000
      - path: /store
        pathType: Exact
        backend:
          service:
            name: store-e-commerce-store
            port:
              number: 3001
